--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./dist/bundle.js",
+    "start-browser": "start index.html",
     "debug": "node-debug ./dist/bundle.js"
   },
   "author": "Paul Li",
