--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "author": "Paul Li",
   "license": "ISC",
   "dependencies": {
-    "immutable-assign": "^1.0.26"
+    "immutable-assign": "github:engineforce/ImmutableAssign"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.0.0-beta.18",
-    "typescript": "^2.1.5"
+    "typescript": "^2.3.2",
+    "webpack": "^2.4.1"
   }
 }
